--- a/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/base/components/select/style.scss
@@ -12,10 +12,10 @@
 		transition: all 200ms ease;
 		color: $gray-50;
 		z-index: 1;
-		margin: 0 $gap;
+		margin: 0 0 0 #{$gap + 1px};
 		overflow: hidden;
 		text-overflow: ellipsis;
-		max-width: calc(100% - #{  2 * $gap });
+		max-width: calc(100% - #{2 * $gap});
 		white-space: nowrap;
 
 		@media screen and (prefers-reduced-motion: reduce) {
